language files and some adaptations

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -8,11 +8,13 @@
     "Already registered?": "Already registered?",
     "Are you sure you want to delete your account?": "Are you sure you want to delete your account?",
     "Are you sure you want to remove this player from the team?": "Are you sure you want to remove this player from the team?",
+    "Available in": "Available in",
     "Calendar Creation": "Calendar Creation",
     "Cancel": "Cancel",
     "Change a playing date": "Change a playing date",
     "Change the captain status of": "Change the captain status of",
     "Changelog": "Changelog",
+    "Choose a day games format": "Choose a day games format",
     "Claim your account": "Claim your account",
     "Click here to re-send the verification email.": "Click here to re-send the verification email.",
     "Confirm": "Confirm",
@@ -30,9 +32,11 @@
     "Day Scores and Game details": "Day Scores and Game details",
     "Day scores": "Day scores",
     "Delete Account": "Delete Account",
+    "Detailed schedules": "Detailed schedules",
     "Email": "Email",
     "Email the password reset link": "Email the password reset link",
     "Ensure your account is using a secure password. The current password is 'secret' and should be filled in.": "Ensure your account is using a secure password. The current password is 'secret' and should be filled in.",
+    "Final Score": "Final Score",
     "Final score is": "Final score is",
     "Forbidden": "Forbidden",
     "Forgot your password?": "Forgot your password?",
@@ -43,13 +47,13 @@
     "If you don't have the person's email, it is auto generated": "If you don't have the person's email, it is auto generated",
     "List of Administrators": "List of Administrators",
     "List of admins": "List of admins",
-    "Live scores day event": "Live scores day event",
     "Log Out": "Log Out",
     "Log in": "Log in",
     "Log in or register": "Log in or register",
     "Name": "Name",
     "Name of the Schedule": "Name of the Schedule",
     "New Password": "New Password",
+    "No schedule available for": "No schedule available for",
     "Not Found": "Not Found",
     "OUR BILLIARD RULES": "OUR BILLIARD RULES",
     "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.",
@@ -60,6 +64,8 @@
     "Participating Teams": "Participating Teams",
     "Password": "Password",
     "Payment Required": "Payment Required",
+    "Planned game for": "Planned game for",
+    "Previous schedules": "Previous schedules",
     "Profile": "Profile",
     "Profile Information": "Profile Information",
     "Profile related": "Profile related",
@@ -68,8 +74,10 @@
     "Resend Verification Email": "Resend Verification Email",
     "Reset Password": "Reset Password",
     "Save": "Save",
-    "Saved.": "Saved.",
+    "Saved": "Saved",
+    "Schedules of the day": "Schedules of the day",
     "Score changes log file": "Score changes log file",
+    "Score updated": "Score updated",
     "Scoreboard explained": "Scoreboard explained",
     "Scores": "Scores",
     "Season": "Season",
@@ -81,6 +89,8 @@
     "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.": "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.",
     "The Calendar": "The Calendar",
     "The chat and rooms": "The chat and rooms",
+    "The daily games of": "The daily games of",
+    "The day scores overview": "The day scores overview",
     "The format is updated": "The format is updated",
     "The format used is": "The format used is",
     "The format used is the": "The format used is the",
@@ -93,26 +103,39 @@
     "Toggle to make a regular player": "Toggle to make a regular player",
     "Too Many Requests": "Too Many Requests",
     "Unauthorized": "Unauthorized",
+    "Upcoming schedules": "Upcoming schedules",
     "Update": "Update",
     "Update Password": "Update Password",
     "Update Season structure": "Update Season structure",
     "Update the Calendar": "Update the Calendar",
     "Update the Season structure": "Update the Season structure",
     "Update the current Calendar": "Update the current Calendar",
+    "Update the scores of the": "Update the scores of the",
     "Update your account's profile information and email address.": "Update your account's profile information and email address.",
     "Updated": "Updated",
     "User created and added to your team! A reminder has been sent with the login info.": "User created and added to your team! A reminder has been sent with the login info.",
     "Visit": "Visit",
     "Visitors": "Visitors",
+    "Website changelog": "Website changelog",
     "You can leave this empty if you don't have the number": "You can leave this empty if you don't have the number",
+    "You can't change the score after the confirmation": "You can't change the score after the confirmation",
     "Your email address is unverified.": "Your email address is unverified.",
+    "Your favorite format is selected": "Your favorite format is selected",
     "auth.password": "auth.password",
+    "confirm": "confirm",
+    "doubles": "doubles",
+    "finished": "finished",
     "has a BYE": "has a BYE",
     "has no BYE": "has no BYE",
+    "if available": "if available",
+    "no daily scores yet": "no daily scores yet",
     "of": "of",
+    "on the": "on the",
     "pagination.next": "pagination.next",
     "pagination.previous": "pagination.previous",
+    "ready to start": "ready to start",
     "results": "results",
     "select": "select",
+    "singles": "singles",
     "to": "to"
 }
