translated version to Dutch

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -1,141 +1,144 @@
 {
-    "A new verification link has been sent to the email address you provided during registration.": "A new verification link has been sent to the email address you provided during registration.",
-    "A new verification link has been sent to your email address.": "A new verification link has been sent to your email address.",
-    "A word of explanation": "A word of explanation",
-    "ADMIN": "ADMIN",
-    "Add a player to the team": "Add a player to the team",
-    "All rights reserved.": "All rights reserved.",
-    "Already registered?": "Already registered?",
-    "Are you sure you want to delete your account?": "Are you sure you want to delete your account?",
-    "Are you sure you want to remove this player from the team?": "Are you sure you want to remove this player from the team?",
-    "Available in": "Available in",
-    "Calendar Creation": "Calendar Creation",
-    "Cancel": "Cancel",
-    "Change a playing date": "Change a playing date",
-    "Change the captain status of": "Change the captain status of",
-    "Changelog": "Changelog",
-    "Choose a day games format": "Choose a day games format",
-    "Claim your account": "Claim your account",
-    "Click here to re-send the verification email.": "Click here to re-send the verification email.",
-    "Confirm": "Confirm",
-    "Confirm Password": "Confirm Password",
-    "Confirm the final score": "Confirm the final score",
-    "Confirmed": "Confirmed",
-    "Create": "Create",
-    "Create Day Sheet": "Create Day Sheet",
-    "Create a new Season": "Create a new Season",
-    "Create a new Venue": "Create a new Venue",
-    "Current Password": "Current Password",
+    "A new verification link has been sent to the email address you provided during registration.": "Er is een nieuwe verificatielink verzonden naar het e-mailadres dat je tijdens de registratie hebt opgegeven.",
+    "A new verification link has been sent to your email address.": "Er is een nieuwe verificatielink naar je e-mailadres gestuurd.",
+    "A word of explanation": "Een woordje uitleg",
+    "ADMIN": "BEHEERDER",
+    "Add a player to the team": "Voeg een speler toe aan het team",
+    "All rights reserved.": "Alle rechten voorbehouden.",
+    "Already registered?": "Al geregistreerd?",
+    "Are you sure you want to delete your account?": "Weet je zeker dat je je account wilt verwijderen?",
+    "Are you sure you want to remove this player from the team?": "Weet je zeker dat je deze speler uit het team wilt verwijderen?",
+    "Available in": "Beschikbaar in",
+    "Calendar Creation": "Kalender aanmaken",
+    "Cancel": "Annuleren",
+    "Change a playing date": "Wijzig een speeldatum",
+    "Change the captain status of": "Wijzig de kapiteinsstatus van",
+    "Changelog": "Wijzigingslogboek",
+    "Choose a day games format": "Kies een dagwedstrijdformaat",
+    "Claim your account": "Claim je account",
+    "Click here to re-send the verification email.": "Klik hier om de verificatiemail opnieuw te verzenden.",
+    "Confirm": "Bevestigen",
+    "Confirm Password": "Bevestig wachtwoord",
+    "Confirm the final score": "Bevestig de eindscore",
+    "Confirmed": "Bevestigd",
+    "Create": "Aanmaken",
+    "Create Day Sheet": "Dagoverzicht aanmaken",
+    "Create a new Season": "Een nieuw seizoen aanmaken",
+    "Create a new Venue": "Een nieuwe locatie aanmaken",
+    "Current Password": "Huidig wachtwoord",
     "Dashboard": "Dashboard",
-    "Day Schedule blueprint": "Day Schedule blueprint",
-    "Day Schedules": "Day Schedules",
-    "Day Scores and Game details": "Day Scores and Game details",
-    "Day scores": "Day scores",
-    "Delete Account": "Delete Account",
-    "Detailed schedules": "Detailed schedules",
-    "Email": "Email",
-    "Email the password reset link": "Email the password reset link",
-    "Ensure your account is using a secure password. The current password is 'secret' and should be filled in.": "Ensure your account is using a secure password. The current password is 'secret' and should be filled in.",
-    "Final Score": "Final Score",
-    "Final score is": "Final score is",
-    "Forbidden": "Forbidden",
-    "Forgot your password?": "Forgot your password?",
-    "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to create a new password.": "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to create a new password.",
-    "General overview": "General overview",
-    "Home": "Home",
-    "Home Team": "Home Team",
-    "If you don't have the person's email, it is auto generated": "If you don't have the person's email, it is auto generated",
-    "List of Administrators": "List of Administrators",
-    "List of admins": "List of admins",
-    "Log Out": "Log Out",
-    "Log in": "Log in",
-    "Log in or register": "Log in or register",
-    "Name": "Name",
-    "Name of the Schedule": "Name of the Schedule",
-    "New Password": "New Password",
-    "No schedule available for": "No schedule available for",
-    "Not Found": "Not Found",
-    "OUR BILLIARD RULES": "OUR BILLIARD RULES",
-    "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.",
-    "Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.",
-    "Or add a new player": "Or add a new player",
-    "Overview and Help": "Overview and Help",
-    "Page Expired": "Page Expired",
-    "Participating Teams": "Participating Teams",
-    "Password": "Password",
-    "Payment Required": "Payment Required",
-    "Planned game for": "Planned game for",
-    "Previous schedules": "Previous schedules",
-    "Profile": "Profile",
-    "Profile Information": "Profile Information",
-    "Profile related": "Profile related",
-    "Register": "Register",
-    "Remember me": "Remember me",
-    "Resend Verification Email": "Resend Verification Email",
-    "Reset Password": "Reset Password",
-    "Save": "Save",
-    "Saved": "Saved",
-    "Schedules of the day": "Schedules of the day",
-    "Score changes log file": "Score changes log file",
-    "Score updated": "Score updated",
-    "Scoreboard explained": "Scoreboard explained",
+    "Day Schedule blueprint": "Dagrooster sjabloon",
+    "Day Schedules": "Dagroosters",
+    "Day Scores and Game details": "Dagresultaten en wedstrijdgegevens",
+    "Day scores": "Dagresultaten",
+    "Delete Account": "Account verwijderen",
+    "Detailed schedules": "Gedetailleerde roosters",
+    "Email": "E-mail",
+    "Email the password reset link": "Stuur de link voor wachtwoordherstel per e-mail",
+    "Ensure your account is using a secure password. The current password is 'secret' and should be filled in.": "Zorg ervoor dat je account een veilig wachtwoord gebruikt. Het huidige wachtwoord is 'secret' en moet worden ingevuld.",
+    "Final Score": "Eindscore",
+    "Final score is": "Eindscore is",
+    "Forbidden": "Verboden",
+    "Forgot your password?": "Wachtwoord vergeten?",
+    "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to create a new password.": "Wachtwoord vergeten? Geen probleem. Laat ons je e-mailadres weten en we sturen je een link om je wachtwoord te resetten.",
+    "General overview": "Algemeen overzicht",
+    "Home": "Startpagina",
+    "Home Team": "Thuisploeg",
+    "If you don't have the person's email, it is auto generated": "Als je het e-mailadres van de persoon niet hebt, wordt het automatisch gegenereerd",
+    "List of Administrators": "Lijst van beheerders",
+    "List of admins": "Lijst van beheerders",
+    "Log Out": "Afmelden",
+    "Log in": "Aanmelden",
+    "Log in or register": "Aanmelden of registreren",
+    "Name": "Naam",
+    "Name of the Schedule": "Naam van het rooster",
+    "New Password": "Nieuw wachtwoord",
+    "No schedule available for": "Geen rooster beschikbaar voor",
+    "Not Found": "Niet gevonden",
+    "OUR BILLIARD RULES": "ONZE BILJARTREGELS",
+    "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Zodra je account is verwijderd, worden alle gegevens permanent verwijderd. Download alle gegevens die je wilt behouden voordat je doorgaat.",
+    "Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Zodra je account is verwijderd, worden alle gegevens permanent verwijderd. Voer je wachtwoord in om te bevestigen dat je je account permanent wilt verwijderen.",
+    "Or add a new player": "Of voeg een nieuwe speler toe",
+    "Overview and Help": "Overzicht en Hulp",
+    "Page Expired": "Pagina verlopen",
+    "Participating Teams": "Deelnemende teams",
+    "Password": "Wachtwoord",
+    "Payment Required": "Betaling vereist",
+    "Planned game for": "Geplande wedstrijd voor",
+    "Previous schedules": "Vorige roosters",
+    "Profile": "Profiel",
+    "Profile Information": "Profielinformatie",
+    "Profile related": "Profielgerelateerd",
+    "Register": "Registreren",
+    "Remember me": "Onthoud mij",
+    "Resend Verification Email": "Verificatiemail opnieuw verzenden",
+    "Reset Password": "Wachtwoord resetten",
+    "Save": "Opslaan",
+    "Saved": "Opgeslagen",
+    "Schedules of the day": "Roosters van de dag",
+    "Score changes log file": "Logbestand scorewijzigingen",
+    "Score updated": "Score bijgewerkt",
+    "Scoreboard explained": "Scorebord uitgelegd",
     "Scores": "Scores",
-    "Season": "Season",
-    "Season Structure": "Season Structure",
-    "Select a player from the users table": "Select a player from the users table",
-    "Server Error": "Server Error",
-    "Service Unavailable": "Service Unavailable",
-    "Showing": "Showing",
-    "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.": "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.",
-    "The Calendar": "The Calendar",
-    "The chat and rooms": "The chat and rooms",
-    "The daily games of": "The daily games of",
-    "The day scores overview": "The day scores overview",
-    "The format is updated": "The format is updated",
-    "The format used is": "The format used is",
-    "The format used is the": "The format used is the",
-    "The log file of all score changes": "The log file of all score changes",
-    "The maximum allowed players has been reached!": "The maximum allowed players has been reached!",
-    "The players": "The players",
-    "There are no players added to the team yet!": "There are no players added to the team yet!",
-    "This is a secure area of the application. Please confirm your password before continuing.": "This is a secure area of the application. Please confirm your password before continuing.",
-    "Toggle to make a captain": "Toggle to make a captain",
-    "Toggle to make a regular player": "Toggle to make a regular player",
-    "Too Many Requests": "Too Many Requests",
-    "Unauthorized": "Unauthorized",
-    "Upcoming schedules": "Upcoming schedules",
-    "Update": "Update",
-    "Update Password": "Update Password",
-    "Update Season structure": "Update Season structure",
-    "Update the Calendar": "Update the Calendar",
-    "Update the Season structure": "Update the Season structure",
-    "Update the current Calendar": "Update the current Calendar",
-    "Update the scores of the": "Update the scores of the",
-    "Update your account's profile information and email address.": "Update your account's profile information and email address.",
-    "Updated": "Updated",
-    "User created and added to your team! A reminder has been sent with the login info.": "User created and added to your team! A reminder has been sent with the login info.",
-    "Visit": "Visit",
-    "Visitors": "Visitors",
-    "Website changelog": "Website changelog",
-    "You can leave this empty if you don't have the number": "You can leave this empty if you don't have the number",
-    "You can't change the score after the confirmation": "You can't change the score after the confirmation",
-    "Your email address is unverified.": "Your email address is unverified.",
-    "Your favorite format is selected": "Your favorite format is selected",
-    "auth.password": "auth.password",
-    "confirm": "confirm",
-    "doubles": "doubles",
-    "finished": "finished",
-    "has a BYE": "has a BYE",
-    "has no BYE": "has no BYE",
-    "if available": "if available",
-    "no daily scores yet": "no daily scores yet",
-    "of": "of",
-    "on the": "on the",
-    "pagination.next": "pagination.next",
-    "pagination.previous": "pagination.previous",
-    "ready to start": "ready to start",
-    "results": "results",
-    "select": "select",
+    "Season": "Seizoen",
+    "Season Structure": "Seizoensstructuur",
+    "Select a player from the users table": "Selecteer een speler uit de gebruikerslijst",
+    "Send emails to players": "Stuur e-mails naar spelers",
+    "Server Error": "Serverfout",
+    "Service Unavailable": "Dienst niet beschikbaar",
+    "Showing": "Weergeven",
+    "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.": "Bedankt voor je registratie! Controleer je e-mailadres door op de link te klikken die we je zojuist hebben gemaild. Heb je de e-mail niet ontvangen? Dan sturen we graag een nieuwe.",
+    "The Calendar": "De Kalender",
+    "The Individual Ranking": "De Individuele Ranglijst",
+    "The chat and rooms": "De chat en kamers",
+    "The daily games of": "De dagelijkse wedstrijden van",
+    "The day scores overview": "Overzicht van de dagresultaten",
+    "The format is updated": "Het formaat is bijgewerkt",
+    "The format used is": "Het gebruikte formaat is",
+    "The format used is the": "Het gebruikte formaat is de",
+    "The individual ranking overview": "Overzicht individuele ranglijst",
+    "The log file of all score changes": "Het logbestand met alle scorewijzigingen",
+    "The maximum allowed players has been reached!": "Het maximaal aantal toegestane spelers is bereikt!",
+    "The players": "De spelers",
+    "There are no players added to the team yet!": "Er zijn nog geen spelers aan het team toegevoegd!",
+    "This is a secure area of the application. Please confirm your password before continuing.": "Dit is een beveiligd gedeelte van de applicatie. Bevestig je wachtwoord om verder te gaan.",
+    "Toggle to make a captain": "Schakel om tot kapitein te maken",
+    "Toggle to make a regular player": "Schakel om tot gewone speler te maken",
+    "Too Many Requests": "Te veel verzoeken",
+    "Unauthorized": "Ongeautoriseerd",
+    "Upcoming schedules": "Aankomende roosters",
+    "Update": "Bijwerken",
+    "Update Password": "Wachtwoord bijwerken",
+    "Update Season structure": "Seizoensstructuur bijwerken",
+    "Update the Calendar": "Kalender bijwerken",
+    "Update the Season structure": "Seizoensstructuur bijwerken",
+    "Update the current Calendar": "Huidige kalender bijwerken",
+    "Update the scores of the": "Scores bijwerken van de",
+    "Update your account's profile information and email address.": "Werk de profielinformatie en het e-mailadres van je account bij.",
+    "Updated": "Bijgewerkt",
+    "User created and added to your team! A reminder has been sent with the login info.": "Gebruiker aangemaakt en toegevoegd aan je team! Een herinnering met inloggegevens is verzonden.",
+    "Visit": "Bezoek",
+    "Visitors": "Bezoekers",
+    "Website changelog": "Wijzigingslogboek website",
+    "You can leave this empty if you don't have the number": "Je kunt dit leeg laten als je het nummer niet hebt",
+    "You can't change the score after the confirmation": "Je kunt de score niet wijzigen na bevestiging",
+    "Your email address is unverified.": "Je e-mailadres is niet geverifieerd.",
+    "Your favorite format is selected": "Je favoriete formaat is geselecteerd",
+    "auth.password": "auth.wachtwoord",
+    "confirm": "bevestigen",
+    "doubles": "dubbels",
+    "finished": "afgerond",
+    "has a BYE": "heeft een BYE",
+    "has no BYE": "heeft geen BYE",
+    "if available": "indien beschikbaar",
+    "no daily scores yet": "nog geen dagresultaten",
+    "of": "van",
+    "on the": "op de",
+    "pagination.next": "volgende",
+    "pagination.previous": "vorige",
+    "ready to start": "klaar om te beginnen",
+    "results": "resultaten",
+    "select": "selecteer",
     "singles": "singles",
-    "to": "to"
+    "to": "naar"
 }
