all translation options for localization added

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -1,19 +1,34 @@
 {
+    "A bar is on your name": "A bar is on your name",
     "A new verification link has been sent to the email address you provided during registration.": "Er is een nieuwe verificatielink verzonden naar het e-mailadres dat je tijdens de registratie hebt opgegeven.",
     "A new verification link has been sent to your email address.": "Er is een nieuwe verificatielink naar je e-mailadres gestuurd.",
     "A word of explanation": "Een woordje uitleg",
     "ADMIN": "BEHEERDER",
+    "Actions": "Actions",
+    "Add a comment": "Add a comment",
     "Add a player to the team": "Voeg een speler toe aan het team",
+    "Add one game": "Add one game",
+    "Administration": "Administration",
+    "All Seasons": "All Seasons",
     "All rights reserved.": "Alle rechten voorbehouden.",
     "Already registered?": "Al geregistreerd?",
+    "Are you sure to delete this room? This can not be undone. All messages are deleted as well": "Are you sure to delete this room? This can not be undone. All messages are deleted as well",
+    "Are you sure to delete your message": "Are you sure to delete your message",
     "Are you sure you want to delete your account?": "Weet je zeker dat je je account wilt verwijderen?",
+    "Are you sure you want to delete your comment": "Are you sure you want to delete your comment",
     "Are you sure you want to remove this player from the team?": "Weet je zeker dat je deze speler uit het team wilt verwijderen?",
     "Available in": "Beschikbaar in",
+    "Before deleting your account, please download any data or information that you wish to retain.": "Before deleting your account, please download any data or information that you wish to retain.",
+    "Calendar": "Calendar",
     "Calendar Creation": "Kalender aanmaken",
     "Cancel": "Annuleren",
+    "Captain": "Captain",
     "Change a playing date": "Wijzig een speeldatum",
     "Change the captain status of": "Wijzig de kapiteinsstatus van",
     "Changelog": "Wijzigingslogboek",
+    "Character left": "Character left",
+    "Chat": "Chat",
+    "Chat rooms": "Chat rooms",
     "Choose a day games format": "Kies een dagwedstrijdformaat",
     "Claim your account": "Claim je account",
     "Click here to re-send the verification email.": "Klik hier om de verificatiemail opnieuw te verzenden.",
@@ -21,72 +36,136 @@
     "Confirm Password": "Bevestig wachtwoord",
     "Confirm the final score": "Bevestig de eindscore",
     "Confirmed": "Bevestigd",
+    "Contact": "Contact",
+    "Contact Number": "Contact Number",
     "Create": "Aanmaken",
     "Create Day Sheet": "Dagoverzicht aanmaken",
+    "Create a chat room": "Create a chat room",
     "Create a new Season": "Een nieuw seizoen aanmaken",
     "Create a new Venue": "Een nieuwe locatie aanmaken",
+    "Create post": "Create post",
+    "Create the new Room": "Create the new Room",
     "Current Password": "Huidig wachtwoord",
+    "Current Team": "Current Team",
+    "Daily games lost": "Daily games lost",
+    "Daily games won": "Daily games won",
     "Dashboard": "Dashboard",
+    "Date": "Date",
     "Day Schedule blueprint": "Dagrooster sjabloon",
     "Day Schedules": "Dagroosters",
     "Day Scores and Game details": "Dagresultaten en wedstrijdgegevens",
     "Day scores": "Dagresultaten",
+    "Delete": "Delete",
     "Delete Account": "Account verwijderen",
+    "Deleted": "Deleted",
     "Detailed schedules": "Gedetailleerde roosters",
+    "Edit": "Edit",
+    "Edit the team players": "Edit the team players",
+    "Edit the venue's details": "Edit the venue's details",
+    "Edit this venue": "Edit this venue",
     "Email": "E-mail",
     "Email the password reset link": "Stuur de link voor wachtwoordherstel per e-mail",
     "Ensure your account is using a secure password. The current password is 'secret' and should be filled in.": "Zorg ervoor dat je account een veilig wachtwoord gebruikt. Het huidige wachtwoord is 'secret' en moet worden ingevuld.",
     "Final Score": "Eindscore",
     "Final score is": "Eindscore is",
+    "Finals? Semi? Other?": "Finals? Semi? Other?",
     "Forbidden": "Verboden",
     "Forgot your password?": "Wachtwoord vergeten?",
     "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to create a new password.": "Wachtwoord vergeten? Geen probleem. Laat ons je e-mailadres weten en we sturen je een link om je wachtwoord te resetten.",
+    "Forum": "Forum",
+    "Forum posts that changed since your last login": "Forum posts that changed since your last login",
+    "Game": "Game",
     "General overview": "Algemeen overzicht",
+    "Has been opened": "Has been opened",
+    "Hide comment": "Hide comment",
     "Home": "Startpagina",
     "Home Team": "Thuisploeg",
     "If you don't have the person's email, it is auto generated": "Als je het e-mailadres van de persoon niet hebt, wordt het automatisch gegenereerd",
+    "Invite players": "Invite players",
+    "Is this room private": "Is this room private",
+    "Last game": "Last game",
+    "Last played Team": "Last played Team",
+    "Last scores": "Last scores",
+    "Last update": "Last update",
     "List of Administrators": "Lijst van beheerders",
     "List of admins": "Lijst van beheerders",
+    "Live update": "Live update",
+    "Locked": "Locked",
     "Log Out": "Afmelden",
     "Log in": "Aanmelden",
     "Log in or register": "Aanmelden of registreren",
+    "Managed by": "Managed by",
+    "Message deleted": "Message deleted",
+    "Minus one game": "Minus one game",
     "Name": "Naam",
     "Name of the Schedule": "Naam van het rooster",
     "New Password": "Nieuw wachtwoord",
+    "No games yet": "No games yet",
+    "No new posts or comments": "No new posts or comments",
+    "No other public rooms": "No other public rooms",
+    "No private rooms": "No private rooms",
     "No schedule available for": "Geen rooster beschikbaar voor",
+    "No seasons are available in the new database": "No seasons are available in the new database",
+    "No selected players in this team": "No selected players in this team",
+    "Nobody yet": "Nobody yet",
     "Not Found": "Niet gevonden",
+    "Not in": "Not in",
+    "Not opened yet": "Not opened yet",
     "OUR BILLIARD RULES": "ONZE BILJARTREGELS",
-    "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Zodra je account is verwijderd, worden alle gegevens permanent verwijderd. Download alle gegevens die je wilt behouden voordat je doorgaat.",
-    "Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Zodra je account is verwijderd, worden alle gegevens permanent verwijderd. Voer je wachtwoord in om te bevestigen dat je je account permanent wilt verwijderen.",
+    "Once your account is deleted, all of its resources and data will be permanently deleted.": "Once your account is deleted, all of its resources and data will be permanently deleted.",
     "Or add a new player": "Of voeg een nieuwe speler toe",
     "Overview and Help": "Overzicht en Hulp",
     "Page Expired": "Pagina verlopen",
+    "Participating Players": "Participating Players",
     "Participating Teams": "Deelnemende teams",
     "Password": "Wachtwoord",
     "Payment Required": "Betaling vereist",
+    "Percentage": "Percentage",
     "Planned game for": "Geplande wedstrijd voor",
+    "Playing date": "Playing date",
+    "Plays at": "Plays at",
+    "Please enter your password to confirm you would like to permanently delete your account.": "Please enter your password to confirm you would like to permanently delete your account.",
+    "Posted by": "Posted by",
     "Previous schedules": "Vorige roosters",
+    "Private Chat": "Private Chat",
     "Profile": "Profiel",
     "Profile Information": "Profielinformatie",
     "Profile related": "Profielgerelateerd",
     "Register": "Registreren",
     "Remember me": "Onthoud mij",
+    "Remove this user from the chat? All related messages will be deleted too": "Remove this user from the chat? All related messages will be deleted too",
     "Resend Verification Email": "Verificatiemail opnieuw verzenden",
+    "Reserve": "Reserve",
     "Reset Password": "Wachtwoord resetten",
+    "Reset the schedule": "Reset the schedule",
+    "Room created": "Room created",
+    "Room name": "Room name",
+    "Room updated": "Room updated",
     "Save": "Opslaan",
     "Saved": "Opgeslagen",
     "Schedules of the day": "Roosters van de dag",
+    "Score": "Score",
     "Score changes log file": "Logbestand scorewijzigingen",
     "Score updated": "Score bijgewerkt",
+    "Scoreboard": "Scoreboard",
     "Scoreboard explained": "Scorebord uitgelegd",
     "Scores": "Scores",
     "Season": "Seizoen",
     "Season Structure": "Seizoensstructuur",
     "Select a player from the users table": "Selecteer een speler uit de gebruikerslijst",
+    "Select another Season": "Select another Season",
+    "Select venue": "Select venue",
+    "Send": "Send",
     "Send emails to players": "Stuur e-mails naar spelers",
     "Server Error": "Serverfout",
     "Service Unavailable": "Dienst niet beschikbaar",
     "Showing": "Weergeven",
+    "Special date": "Special date",
+    "Started by": "Started by",
+    "Sticky": "Sticky",
+    "Team": "Team",
+    "Team details": "Team details",
+    "Teams": "Teams",
     "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.": "Bedankt voor je registratie! Controleer je e-mailadres door op de link te klikken die we je zojuist hebben gemaild. Heb je de e-mail niet ontvangen? Dan sturen we graag een nieuwe.",
     "The Calendar": "De Kalender",
     "The Individual Ranking": "De Individuele Ranglijst",
@@ -96,49 +175,95 @@
     "The format is updated": "Het formaat is bijgewerkt",
     "The format used is": "Het gebruikte formaat is",
     "The format used is the": "Het gebruikte formaat is de",
+    "The help pages": "The help pages",
     "The individual ranking overview": "Overzicht individuele ranglijst",
     "The log file of all score changes": "Het logbestand met alle scorewijzigingen",
     "The maximum allowed players has been reached!": "Het maximaal aantal toegestane spelers is bereikt!",
     "The players": "De spelers",
+    "The team": "The team",
+    "There are no games yet": "There are no games yet",
     "There are no players added to the team yet!": "Er zijn nog geen spelers aan het team toegevoegd!",
     "This is a secure area of the application. Please confirm your password before continuing.": "Dit is een beveiligd gedeelte van de applicatie. Bevestig je wachtwoord om verder te gaan.",
+    "Title": "Title",
     "Toggle to make a captain": "Schakel om tot kapitein te maken",
     "Toggle to make a regular player": "Schakel om tot gewone speler te maken",
     "Too Many Requests": "Te veel verzoeken",
+    "Total games lost": "Total games lost",
+    "Total games won": "Total games won",
     "Unauthorized": "Ongeautoriseerd",
     "Upcoming schedules": "Aankomende roosters",
     "Update": "Bijwerken",
     "Update Password": "Wachtwoord bijwerken",
     "Update Season structure": "Seizoensstructuur bijwerken",
+    "Update post": "Update post",
     "Update the Calendar": "Kalender bijwerken",
     "Update the Season structure": "Seizoensstructuur bijwerken",
     "Update the current Calendar": "Huidige kalender bijwerken",
     "Update the scores of the": "Scores bijwerken van de",
+    "Update your Chat Room": "Update your Chat Room",
     "Update your account's profile information and email address.": "Werk de profielinformatie en het e-mailadres van je account bij.",
     "Updated": "Bijgewerkt",
     "User created and added to your team! A reminder has been sent with the login info.": "Gebruiker aangemaakt en toegevoegd aan je team! Een herinnering met inloggegevens is verzonden.",
+    "Venue": "Venue",
     "Visit": "Bezoek",
+    "Visitor": "Visitor",
     "Visitors": "Bezoekers",
     "Website changelog": "Wijzigingslogboek website",
+    "What is your role in the current Season": "What is your role in the current Season",
+    "Write a new post": "Write a new post",
+    "You are the Captain, you can": "You are the Captain, you can",
     "You can leave this empty if you don't have the number": "Je kunt dit leeg laten als je het nummer niet hebt",
     "You can't change the score after the confirmation": "Je kunt de score niet wijzigen na bevestiging",
+    "You don't play for a team. If you think this is an error": "You don't play for a team. If you think this is an error",
+    "You may leave this empty, except for bar owners and captains": "You may leave this empty, except for bar owners and captains",
+    "You play for": "You play for",
+    "Your Dashboard": "Your Dashboard",
+    "Your comment": "Your comment",
+    "Your current": "Your current",
+    "Your current position": "Your current position",
     "Your email address is unverified.": "Je e-mailadres is niet geverifieerd.",
     "Your favorite format is selected": "Je favoriete formaat is geselecteerd",
+    "Your message": "Your message",
+    "Your participation": "Your participation",
+    "Your team members are": "Your team members are",
     "auth.password": "auth.wachtwoord",
-    "confirm": "bevestigen",
+    "back to post": "back to post",
+    "back to the forum": "back to the forum",
+    "can only be changed by administrators": "can only be changed by administrators",
+    "columns": "columns",
+    "contact your captain or bar owner": "contact your captain or bar owner",
+    "created by": "created by",
+    "day": "day",
+    "delete the date": "delete the date",
     "doubles": "dubbels",
     "finished": "afgerond",
+    "games": "games",
+    "games participated": "games participated",
     "has a BYE": "heeft een BYE",
     "has no BYE": "heeft geen BYE",
+    "hidden": "hidden",
     "if available": "indien beschikbaar",
+    "if this is an error or a holiday": "if this is an error or a holiday",
+    "individual rank is": "individual rank is",
+    "invited": "invited",
+    "last comment by": "last comment by",
+    "manage your team here": "manage your team here",
     "no daily scores yet": "nog geen dagresultaten",
     "of": "van",
     "on the": "op de",
     "pagination.next": "volgende",
     "pagination.previous": "vorige",
+    "players selected of a maximum of": "players selected of a maximum of",
+    "please create some": "please create some",
+    "posted by": "posted by",
+    "pushed to the top for important messages": "pushed to the top for important messages",
     "ready to start": "klaar om te beginnen",
     "results": "resultaten",
     "select": "selecteer",
+    "select date": "select date",
     "singles": "singles",
-    "to": "naar"
+    "to": "naar",
+    "update team and players": "update team and players",
+    "users": "users",
+    "week": "week"
 }
